--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-theme: jekyll-theme-hacker
+theme: jekyll-theme-leap-day
 title: Welcome to Dipayan Saha’s homepage!
 description: Feel free to bookmark this to keep an eye on my project updates
